[project]
name = "question-answering-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "narinemarutyan",email = "narine_marutyan@epam.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn (>=0.30.0,<1.0.0)",
    "streamlit (>=1.28.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
